# EE490_Senior_Design_Project

./: .gitignore  .gitmodules  README.md
Application/: forge.config.ts  package.json  webpack.main.config.ts
Application/electron/: .gitignore  .pnp.cjs  app.js  app.ts  index.html  main.js  main.ts  package.json  preload.js  preload.ts  renderer.js  renderer.ts  tsconfig.json
Application/electron/public/: electron.js
Application/electron/src/: App.js
Application/electron/src/components/: App.js  OldApp.js  OldApp.tsx  Test.js
Application/src/: App.tsx  AtomMain.ts  AtomRenderer.ts  Atoms.ts  Dashboard.tsx  IPCInterface.ts  Index.ts  JoyApp.tsx  Preload.ts  Renderer.tsx  SerialManager.ts  app.tsx  index.css  index.html  index.ts  preload.ts  renderer.tsx  useStateObj.ts
Application/src/components/: AppBar.tsx  Layout.tsx  Menu.tsx
Electronics/: EE490.DbLib  EE490.LibPkg  EE490.PcbLib  EE490.SchLib  EE490.cmp  EE490DB.xlsx
Electronics/Models/: EPC23102.lib  TMCS1100A1.lib  TMCS1100A2.lib  TMCS1100A3.lib  TMCS1100A4.lib  TPS62A02.lib  ads7c00s.ibs
Electronics/Project Outputs for EE490/: EE490.IntLib
Electronics/Projects/: EE490.RUL
Electronics/Projects/BatteryHolder/BatteryHolder/: BatteryHolder.PcbDoc  BatteryHolder.PrjPcb  BatteryHolder.PrjPcbStructure  BatteryHolder.SchDoc
Electronics/Projects/CurrentSensor/CurrentSensor/: CurrentSensor.BomDoc  CurrentSensor.Harness  CurrentSensor.PcbDoc  CurrentSensor.PrjPcb  CurrentSensor.SchDoc  CurrentSensor.html  CurrentSensor.txt  CurrentSensor.xlsx
Electronics/Projects/Fabrication/: panel-roundholes.txt  panel-slotholes.txt  panel.gbl  panel.gbo  panel.gbs  panel.gm1  panel.gtl  panel.gto  panel.gtp  panel.gts
Electronics/Projects/OVPSwitch/OVPSwitch/: OVPSwitch.BomDoc  OVPSwitch.PcbDoc  OVPSwitch.PrjPcb  OVPSwitch.PrjPcbStructure  OVPSwitch.SchDoc  OVPSwitch.html  OVPSwitch.txt  OVPSwitch.xlsx
Electronics/Projects/Panel/Panel/: Copper.Cam  Drill.Cam  Panel.PcbDoc  Panel.PrjPcb
Electronics/Projects/RP2040Breakout/: RP2040Breakout.BomDoc  RP2040Breakout.Harness  RP2040Breakout.PcbDoc  RP2040Breakout.PcbDoc.htm  RP2040Breakout.PrjPcb  RP2040Breakout.PrjPcbStructure  RP2040Breakout.SchDoc  RP2040Breakout.html  RP2040Breakout.txt  RP2040Breakout.xlsx  SMPSSim.SchDoc  USBPowerMux.SchDoc
Electronics/Projects/RP2040Breakout/Project Outputs for RP2040Breakout/: Design Rule Check - RP2040Breakout.drc  Design Rule Check - RP2040Breakout.html  Net Status - RP2040Breakout.html  Net Status - RP2040Breakout.txt  RP2040Breakout.nsx
Electronics/Projects/RP2040Breakout/Simulation/: RP2040Breakout.sdf
Electronics/Projects/SMPSBreakout/SMPSBreakout/: SMPSBreakout.BomDoc  SMPSBreakout.PcbDoc  SMPSBreakout.PrjPcb  SMPSBreakout.PrjPcbStructure  SMPSBreakout.SchDoc  SMPSBreakout.html  SMPSBreakout.txt  SMPSBreakout.xlsx
Electronics/Projects/Step Models/: CurrentSensor.step  OVPSwitch.step  SMPSBreakout.step  VoltageInput.step
Electronics/Projects/Tag/Tag/: Tag.PcbDoc  Tag.PrjPcb
Electronics/Projects/VoltageInput/VoltageInput/: VoltageInput.BomDoc  VoltageInput.PcbDoc  VoltageInput.PrjPcb  VoltageInput.PrjPcbStructure  VoltageInput.SchDoc  VoltageInput.xlsx
Electronics/SimTest/SimTest/: ActiveBOM.BomDoc  Assembly.PCBDwf  PCB1.PcbDoc  Sheet1.SchDoc  SimTest.PrjPcb  SimTest.simcfg  project_sim_config.simcfg
Electronics/SimTest/SimTest/Project Outputs/: SimTest.nsx  Status Report.Txt
Firmware/: .gitignore  ARMGCCToolchain.cmake  CMakeLists.txt  CMakePresets.json
Firmware/Inc/ConditionalFunction/: CMakeLists.txt  ConditionalFunction.hpp  ConditionalFunction_Test.cpp
Firmware/Inc/FastPID/: CMakeLists.txt  FastPID.hpp  FastPID_Fixture.hpp  FastPID_Test.cpp
Firmware/Inc/MPPT/: CMakeLists.txt  MPPT.hpp  MPPT_Test.cpp
Firmware/Inc/ModuloScheduler/: CMakeLists.txt  ModuloScheduler.hpp  ModuloScheduler_Fixture.hpp  ModuloScheduler_Test.cpp
Firmware/Inc/PicoCpp/ADC/: ADC.hpp  CMakeLists.txt
Firmware/Inc/PicoCpp/DMA/: CMakeLists.txt  DMA.hpp
Firmware/Inc/PicoCpp/GPIO/: CMakeLists.txt  GPIO.hpp
Firmware/Inc/RP2040_PWM/: CMakeLists.txt  RP2040_PWM.cpp  RP2040_PWM.hpp  RP2040_PWM.ipp
Firmware/Inc/TypedUnits/: CMakeLists.txt  TypedUnits.hpp
Firmware/Src/: FastPID.cpp  FastPID.hpp  FastPID.ipp  GetLine.hpp  States.hpp  System.hpp  TypedUnits.hpp  main.cpp  main1.cpp  main1.hpp  test_main.cpp
Firmware/Test/: BasicTest.cpp  main.cpp
Simulation/: .gitignore  BuckParameters.py  CoilcraftInductors.csv  CoilcraftLTLibProcessor.ipynb  CoilcraftModels.csv  CoilcraftRandomSelect.py  CurrentData.csv  CyEvolution.py  CySetup.pyx  EPC23102_Manual.txt  EfficiencyBugFixing.ipynb  EfficiencyMismatch.xlsx  Inductors.csv  JSON2Mermaid.ipynb  LTEvolution.ipynb  LTEvolution.py  LTLibProcessor.py  LTSim.ipynb  LTTest.ipynb  LTTraceData.py  MurataLTLibProcessor.ipynb  MurataRandomSelect.py  MyEASimple.py  ProcessedInductors.csv  PyEvolution.py  RichModuleTest.py  RichTest.py  SimpleEvolution.ipynb  Testing.py  _F-416793_I-476_C1-1728_C2-1089_C3-1827_C4-2053.txt  requirements.txt
Simulation/LTFiles/: Draft1.asc  EPC23101_With_Schottky.asc  EPC23101_model.asy  EPC23101_sim.asc  EPC23102_Manual.asc  EPC23102_Mine Working.asc  EPC23102_Mine.asc  EPC23102_With_Schottky.asc  EPC23102_sim.asc  EPCGaNLibrary.lib  FullyCustom.fail  GRM_Mine.asy  I-2936_C1-10558_C2-7227_C3-2712_C4-6544.fail  I-2936_C1-10558_C2-7227_C3-9091_C4-6544.fail  PMEG6030EVP.asy  PMEG6030EVP.txt  ResistorDivider.asc  Temp  XAL1010_Mine.asy  subset_inductors.lib
Simulation/OriginalLTFiles/: EPC23102_Mine.asc  GRM_Mine.asy  InSchematicSubCktExample.asc  XAL1010_Mine.asy  XAL1580.asy  XAL1580.lib
docs/: HelpTOC.json  config.json  starter-topic.html
docs/Writerside/: e.tree  project.ihp  redirection-rules.xml
docs/Writerside/topics/: Current-Sensors.md  Current-Voltage-Sensors.md  Electronics.md  Firmware.md  Housing.md  MPPT  MPPT.md  Mechanical.md  Over-Voltage-Protection-1-2.md  Over-Voltage-Protection.md  RP2040-Breakout.md  SMPS-Breakdown-1-2.md  SMPS-Breakdown.md  Simulation.md  Solar-Pannels.md  USB-Charger-Interface.md  Voltage-Sensor.md  starter-topic.md
(+34 files in other folders)
